<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_concern"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlreadyWatchListActivity">

    <ListView
        android:id="@+id/lvConcernList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btConcernDelete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/concern_button"
        android:text="@string/bt_delete"
        android:textColor="@color/themeConcernText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btConcernSort"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <Button
        android:id="@+id/btConcernSort"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/concern_button"
        android:text="@string/bt_sort"
        android:textColor="@color/themeConcernText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btConcernSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btConcernDelete"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <Button
        android:id="@+id/btConcernSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/concern_button"
        android:text="@string/bt_search"
        android:textColor="@color/themeConcernText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btConcernSort"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/flConcern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline2"
        >

        <TextView
            android:id="@+id/tvConcernTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/themeConcern"
            android:gravity="center"
            android:text="@string/tv_concern_title"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            />

        <Button
            android:id="@+id/btConcernHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/concern_button_home"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/bt_home"
            android:textColor="@color/themeHomeText"
            android:textSize="20sp"
            android:layout_gravity="end"
            />

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>