<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvStartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/themeOrange"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingRight="40dp"
        android:paddingBottom="30dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@color/themeAlreadyWatch"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:text="@string/bt_done"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/btConcern"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStartTitle" />

    <Button
        android:id="@+id/btConcern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@color/themeConcern"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:text="@string/bt_concern"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btDone"
        app:layout_constraintTop_toBottomOf="@id/tvStartTitle" />

    <ImageButton
        android:id="@+id/ibPlus"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btConcern"
        app:srcCompat="@drawable/plus_button" />

</androidx.constraintlayout.widget.ConstraintLayout>