<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/themeOrange"
        android:padding="15dp"
        android:text="@string/tv_debug"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvProduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/tv_debug"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_debug"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvProduction"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        />

    <LinearLayout
        android:id="@+id/genreLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/tvYear" >

        <TextView
            android:id="@id/tvGenre1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:text="@string/tv_debug"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            />

        <TextView
            android:id="@id/tvGenre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:text="@string/tv_debug"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            />

        <TextView
            android:id="@id/tvGenre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:text="@string/tv_debug"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tvActorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_actor"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorBlack"
        android:background="@color/dramaButton"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline3"
        />

    <TextView
        android:id="@+id/tvActor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:background="@color/themeOrange"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        android:text="@string/tv_debug"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tvActor2"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline3" />

    <TextView
        android:id="@+id/tvActor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:background="@color/themeOrange"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        android:text="@string/tv_debug"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/tvActor1"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline3" />

    <TextView
        android:id="@+id/tvActor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/themeOrange"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        android:text="@string/tv_debug"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvActor1" />

    <TextView
        android:id="@+id/tvRatingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dramaButton"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/tv_rating"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvReviewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline4" />

    <TextView
        android:id="@+id/tvReviewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_review"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorBlack"
        android:background="@color/dramaButton"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline2"
        app:layout_constraintTop_toBottomOf="@id/tvRatingTitle"
        />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_debug"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline4" />

    <TextView
        android:id="@+id/tvReview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tv_debug"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReviewTitle"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        />

    <Button
        android:id="@+id/btBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drama_button"
        android:text="@string/bt_return"
        android:textColor="@color/themeOrange"
        android:textSize="20sp"
        android:onClick="onBackButtonClick"
        app:layout_constraintEnd_toStartOf="@+id/btEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drama_button"
        android:text="@string/bt_edit"
        android:textColor="@color/themeOrange"
        android:textSize="20sp"
        android:onClick="onEditButtonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btBack"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>